Allow wrapping to prevent text from being cut off

--- a/src/_scss/pages/awardV2/visualizations/_additionalInfo.scss
+++ b/src/_scss/pages/awardV2/visualizations/_additionalInfo.scss
@@ -36,10 +36,6 @@
                         td {
                             border: 0;
 
-                            &:first-child {
-                                white-space: nowrap;
-                            }
-
                             &:last-child {
                                 font-weight: $font-light;
                             }
